# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import foldersRouter from "./folders";
+import tracksRouter from "./tracks";
+import downloadsRouter from "./downloads";
+import statsRouter from "./stats";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(foldersRouter);
+router.use(tracksRouter);
+router.use(downloadsRouter);
+router.use(statsRouter);
 
 export default router;
